--- a/Frontend/ShopNest/src/pages/Profile/Profile.css
+++ b/Frontend/ShopNest/src/pages/Profile/Profile.css
@@ -1,4 +1,5 @@
 .profile-page {
+  min-height: 90vh;
   max-width: 100%;
   margin: 0 auto;
   padding: 60px 0px;
@@ -57,6 +58,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.cart-item-details-info{
+  text-align: left;
 }
 
 .cart-item-name {
